[gd_scene load_steps=5 format=3 uid="uid://boe7wya5y54mq"]

[ext_resource type="Theme" uid="uid://y72soc2heqau" path="res://themes/theme.tres" id="1_760co"]
[ext_resource type="Script" path="res://scenes/_shared/ui/simple_dialog.gd" id="1_o20yj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlpij"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85es1"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.258824, 0.721569, 0.737255, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 4
anti_aliasing = false

[node name="SimpleDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_760co")
theme_override_styles/panel = SubResource("StyleBoxFlat_mlpij")
script = ExtResource("1_o20yj")

[node name="DialogContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_85es1")

[node name="VBoxContainer" type="VBoxContainer" parent="DialogContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BodyLabel" type="Label" parent="DialogContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Body"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DialogContainer/VBoxContainer"]
layout_mode = 2

[node name="NegativeBtn" type="Button" parent="DialogContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../PositiveBtn")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../PositiveBtn")
focus_previous = NodePath("../PositiveBtn")
mouse_filter = 2
button_mask = 0
text = "No"

[node name="PositiveBtn" type="Button" parent="DialogContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../NegativeBtn")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../NegativeBtn")
focus_previous = NodePath("../NegativeBtn")
mouse_filter = 2
button_mask = 0
text = "Yes"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="DialogContainer/VBoxContainer/HBoxContainer/NegativeBtn" to="." method="_on_negative_btn_pressed"]
[connection signal="pressed" from="DialogContainer/VBoxContainer/HBoxContainer/PositiveBtn" to="." method="_on_positive_btn_pressed"]
